--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3802,7 +3802,7 @@ input, select, textarea {
 				margin: 0 3em 2em 0;
 				width: 22em;
 				overflow: hidden;
-				-ms-flex: 1;
+				/* -ms-flex: 1; */
 			}
 
 				.wrapper.spotlight .image img {
@@ -3812,7 +3812,7 @@ input, select, textarea {
 
 			.wrapper.spotlight .content {
 				width: 100%;
-				-ms-flex: 2;
+				/* -ms-flex: 2; */
 			}
 
 			.wrapper.spotlight:nth-child(2n - 1) .inner {
