--- a/assets/css/animation_typing.css
+++ b/assets/css/animation_typing.css
@@ -1,16 +1,7 @@
-html,body {
-  font-family: 'Raleway', sans-serif;
+h1.typing, h2.typing {
+  font-weight: 100;
   font-size: 15px;
-  background: #222;
-  color: #aaa
+  margin: 0.3em 0;
 }
-
-h1,h2 {
-  font-weight: 200;
-  margin: 0.4em 0;
-}
-h1 { font-size: 3.5em; }
-h2 {
-  font-size: 2em;
-  
-}
+h1.typing { font-size: 2.5em; }
+h2.typing { font-size: 1.5em; }
