Navigation Bar Chnage Indent

--- a/contents_resources/styles/mainStyles.css
+++ b/contents_resources/styles/mainStyles.css
@@ -1,17 +1,34 @@
+/* Body Style */
+body {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+/* Class tab Style */
+
+.tab {
+  margin-left: 40px;
+}
+.tab2 {
+  margin-left: 80px;
+}
+
 /* Style the navbar */
 .navbar {
   background-color: #00415a;
   position: fixed;
   top: 0;
-  width: 100%; 
+  width: 100%;
   transition: top 0.3s;
+  margin-left: -40px;
 }
 
-.clr{
-  clear:both;
+.clr {
+  clear: both;
 }
 
-.navbar .main{
+.navbar .main {
   background-color: #00415a;
   float: left;
   display: block;
@@ -53,7 +70,7 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 /* Links inside the dropdown */
@@ -75,18 +92,6 @@
   display: block;
 }
 
-/* Body Style */
-body {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  margin-left: 50px;
-  margin-right: 50px;
-}
-
-/* Class tab Style */
-
-.tab { margin-left: 40px; }
-.tab2 { margin-left: 80px; }
-
 /* Code Style */
 code {
   background-color: aqua;
@@ -101,7 +106,6 @@ hr.dash {
   border: 1px dashed #009bd6;
 }
 
-
 /* Headline Style */
 h1 {
   color: #00415a;
@@ -109,7 +113,10 @@ h1 {
 h2 {
   color: #00719c;
 }
-h3, h4, h5, h6 {
+h3,
+h4,
+h5,
+h6 {
   color: #009bd6;
 }
 
@@ -145,19 +152,24 @@ textarea.ta4 {
 
 /* Table Style */
 table.t1 {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-table.t1 td, table.t1 th {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table.t1 td,
+table.t1 th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-table.t1 tr:nth-child(even){background-color: #f2f2f2;}
+table.t1 tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
-table.t1 tr:hover {background-color: #ddd;}
+table.t1 tr:hover {
+  background-color: #ddd;
+}
 
 table.t1 th {
   padding-top: 12px;
@@ -170,26 +182,29 @@ table.t1 th {
 /* Link Style */
 a:link {
   color: #009bd6;
-  text-decoration:none;
+  text-decoration: none;
 }
 a:hover {
   color: #009bd6;
-  text-decoration:none;
-  background:#00415a;
+  text-decoration: none;
+  background: #00415a;
 }
 a:visited {
   color: #009bd6;
-  text-decoration:none;
+  text-decoration: none;
 }
 a:active {
   color: #009bd6;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 /* Style Button */
 
-button, input[type=button], input[type=submit], input[type=reset] {
-  background-color: #00719c; 
+button,
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
+  background-color: #00719c;
   border: none;
   color: white;
   padding: 8px 20px;
@@ -198,12 +213,15 @@ button, input[type=button], input[type=submit], input[type=reset] {
   font-size: 16px;
 }
 
-button:hover, input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-  background-color: #009bd6; 
+button:hover,
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover {
+  background-color: #009bd6;
 }
 
 /* Calculator */
-.calculator{
+.calculator {
   background-color: skyblue;
   width: 260px;
 }
@@ -211,7 +229,10 @@ button:hover, input[type=button]:hover, input[type=submit]:hover, input[type=res
   width: 250px;
   height: 30px;
 }
-.number, .operator, .all-clear, .decimal {
+.number,
+.operator,
+.all-clear,
+.decimal {
   width: 60px;
   height: 40px;
 }
@@ -223,32 +244,26 @@ button:hover, input[type=button]:hover, input[type=submit]:hover, input[type=res
 }
 
 /* block */
-.top-block{
+.top-block {
   background-color: navy;
   color: white;
 }
 
-.content-block{
-  float:left;
-  width:70%;
+.content-block {
+  float: left;
+  width: 70%;
   box-sizing: border-box;
 }
 
-.sidenav{
-  float:right;
-  width:30%;
-  height:265px;
+.sidenav {
+  float: right;
+  width: 30%;
+  height: 265px;
   box-sizing: border-box;
   background-color: skyblue;
 }
 
-strong{
+strong {
   font-weight: bold;
-  color:#00415a;
+  color: #00415a;
 }
-
-
-
-
-
-
