Change line space in contents

--- a/contents_resources/styles/mainStyles.css
+++ b/contents_resources/styles/mainStyles.css
@@ -3,6 +3,7 @@ body {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   margin-left: 40px;
   margin-right: 40px;
+  line-height: 1.7em;
 }
 
 /* Class tab Style */
